# Dwarf

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dwarf.sln  README.md
Vulkan Engine/: Camera.cpp  Camera.h  Color.cpp  Color.h  CommandBufferBuilder.cpp  IBuildable.h  Makefile  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Submesh.cpp  Submesh.h  Texture.cpp  Texture.h  ThreadPool.cpp  ThreadPool.h  Tools.cpp  Tools.h  Vulkan Engine.vcxproj  Vulkan Engine.vcxproj.filters  main.cpp
Vulkan Engine/shaders/: compile.bat  compile32.bat  frag.spv  material.frag  material.frag.spv  material.vert  material.vert.spv  materialTexture.frag.spv  materialTexture.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  vert.spv
include/: AllocationManager.h  Camera.h  Color.h  CommandBufferBuilder.h  CommandBufferManager.h  CommandBuffersBuilder.h  DeviceAllocationManager.h  IBuildable.h  ImageManager.h  Light.h  LightManager.h  Material.h  MaterialManager.h  Mesh.h  MeshData.h  Model.h  ModelData.h  ModelLoader.h  ModelManager.h  Renderer.h  SceneManager.h  Submesh.h  Texture.h  TextureManager.h  ThreadPool.h  Tools.h  Transformable.h
shaders/: compile.bat  material.frag  material.vert  materialTexture.frag  materialTexture.vert
src/: AllocationManager.cpp  Color.cpp  CommandBufferBuilder.cpp  CommandBufferManager.cpp  CommandBuffersBuilder.cpp  DeviceAllocationManager.cpp  ImageManager.cpp  Light.cpp  LightManager.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  ModelManager.cpp  Renderer.cpp  SceneManager.cpp  Submesh.cpp  Texture.cpp  TextureManager.cpp  ThreadPool.cpp  Tools.cpp  Transformable.cpp  main.cpp
